z-index fix

--- a/src/components/Popup/Popup.module.css
+++ b/src/components/Popup/Popup.module.css
@@ -7,7 +7,7 @@
     max-width: 1920px;
     height: 1px;
     padding: 0 5%;
-    z-index: 5;
+    z-index: 2147483646
 }
 
 .popup {
